# hfsd

./: .air.toml  .env.example  .gitignore  .gitmodules  Makefile  README.md  config.yml  docker-compose.yml  go.mod  go.sum  package.json  pg.docker-compose.yml  pyproject.toml  sqlc.yml  startup.py  tailwind.config.js  worker.py
cmd/api/: main.go
cmd/api_test/: main.go
data/: efs.go
database/: models.go  models.py  query.go.sql.go  query.py.py
internal/client/: connection.go
internal/config/: config.go
internal/database/: connection.go  extras.go  models.go  querier.go  query.sql.go
internal/entity/: domain.go  domain_enum.go  inference.go  model.go  model_enum.go  sample.go  task.go  train.go  user.go
internal/errors/: error.go
internal/repo/: user.go
internal/s3/: client.go
internal/server/: routes.go  server.go
internal/utils/: image.go  slices.go
internal/worker/: worker.go
migrations/: setup.sql
migrations/2024-02-05-045753_init_user/: down.sql  up.sql
migrations/2024-03-18-111037_setup/: down.sql  up.sql
notebooks/: inpaint.ipynb
sql/: query.py.sql  query.sql  revert.sql  schema.sql
src/: config.py  s3.py  schema.rs
src/database/: __init__.py  models.py  (+1 more)
templates/: base.templ  base_templ.go  efs.go  factory.templ  factory_templ.go  feedback.templ  feedback_templ.go  finetune.templ  finetune_templ.go  hello.templ  hello_templ.go  home.templ  home_templ.go  inference.templ  inference_templ.go  login.templ  login_templ.go  showcase.templ  showcase_templ.go  signup.templ  signup_templ.go  user_guide.templ  user_guide_templ.go
(+45 files in other folders)
